# envcipher

./: .env  .gitignore  Cargo.toml  README.md  envcipher.txt  pyproject.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
src/: error.rs  lib.rs  main.rs
src/cli/: edit.rs  init.rs  key.rs  lock.rs  mod.rs  run.rs  status.rs  unlock.rs
src/crypto/: aead.rs  mod.rs  secret.rs
src/env/: parser.rs
src/keystore/: mod.rs
tests/: crypto.rs  env.rs  integration.rs  keystore.rs
