[package]
name = "envcipher"
version = "0.1.1"
edition = "2024"
authors = ["iamprecieee"]
description = "Encipher .env files to make accidental leaks harmless"
license = "MIT"
repository = "https://github.com/iamprecieee/envcipher"
keywords = ["env", "encryption", "secrets", "security", "cli"]
categories = ["command-line-utilities", "cryptography"]
exclude = [
    "pyproject.toml",
    ".venv/",
    "test.py",
    "__pycache__/",
    "*.whl",
    "target/wheels/",
    ".env",
]

[lib]
name = "envcipher"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native"] }
rand = "0.9.2"
sha2 = "0.10.9"
thiserror = "2.0.18"
tempfile = "3.24.0"
shell-words = "1.1.1"
zeroize = { version = "1.8.2", features = ["derive"] }
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }


[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"

[[bin]]
name = "envcipher"
path = "src/main.rs"
